<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiPlease</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login_and_register">LoginAndRegister</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
	<string name="map">Map</string>
	<string name="list">List</string>
	<string name="settings">Settings</string>
	<string name="change_status">Change status</string>
</resources>
